@@ -2,6 +2,7 @@
 === (next) ===
 CHANGED: improved aside menu & top bar
 NEW: updated Gatsby, RMWC and other deps
+NEW: added GitLab links
 
 === 0.7.7 (2018-06-09) ===
 NEW: AsynsSteps semantics error handling & production mode
